# minecraft

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Application.h  Block.cpp  Block.h  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Entity.h  Game.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.h  Window.cpp  Window.h  World.cpp  World.h  config.h  main.cpp
src/Game/: Game.cpp  Game.h
src/game/: camera.cpp  camera.h  game.cpp  game.h
src/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/libs/: stb_image.h
src/menu/: Button.cpp  Button.h  Menu.cpp  Menu.h  button.cpp  menu.cpp  menu.h
src/mesh/: ChunkMesh.cpp  ChunkMesh.h  ChunkMeshGenerator.cpp  ChunkMeshGenerator.h  Mesh.cpp  Mesh.h  MeshAtlas.cpp  MeshAtlas.h
src/physics/: AABB.h
src/player/: Player.cpp  Player.h
src/render/: ChunkRenderer.cpp  ChunkRenderer.h  Renderer.cpp  Renderer.h
src/res/shaders/: core.frag  frag.glsl  vert.glsl
src/utils/: FileSystem.cpp  FileSystem.h  Shader.h  Texture.cpp  Texture.h  VertexBuffer.h
src/window/: Window.cpp  Window.h  WindowState.h  window.cpp  window.h
src/world/: Block.cpp  Block.h  BlockType.h  Chunk.h  World.cpp  World.h  block.cpp  block.h
